[gd_scene load_steps=38 format=2]

[ext_resource path="res://shaders_and_materials/options_gui/save_pressed.png" type="Texture" id=1]
[ext_resource path="res://shaders_and_materials/options_gui/volume_deselect.png" type="Texture" id=2]
[ext_resource path="res://shaders_and_materials/options_gui/return_hover.png" type="Texture" id=3]
[ext_resource path="res://shaders_and_materials/options_gui/load_hover.png" type="Texture" id=4]
[ext_resource path="res://shaders_and_materials/options_gui/restart.png" type="Texture" id=5]
[ext_resource path="res://shaders_and_materials/options_gui/save_hover.png" type="Texture" id=6]
[ext_resource path="res://shaders_and_materials/options_gui/volume.png" type="Texture" id=7]
[ext_resource path="res://shaders_and_materials/options_gui/volume_hover.png" type="Texture" id=8]
[ext_resource path="res://shaders_and_materials/options_gui/return.png" type="Texture" id=9]
[ext_resource path="res://shaders_and_materials/options_gui/load.png" type="Texture" id=10]
[ext_resource path="res://shaders_and_materials/options_gui/load_pressed.png" type="Texture" id=11]
[ext_resource path="res://shaders_and_materials/options_gui/music_deselect.png" type="Texture" id=12]
[ext_resource path="res://shaders_and_materials/options_gui/save.png" type="Texture" id=13]
[ext_resource path="res://shaders_and_materials/options_gui/music_pressed.png" type="Texture" id=14]
[ext_resource path="res://shaders_and_materials/options_gui/restart_hover.png" type="Texture" id=15]
[ext_resource path="res://shaders_and_materials/options_gui/music.png" type="Texture" id=16]
[ext_resource path="res://shaders_and_materials/options_gui/restart_pressed.png" type="Texture" id=17]
[ext_resource path="res://shaders_and_materials/options_gui/background.png" type="Texture" id=18]
[ext_resource path="res://shaders_and_materials/options_gui/music_hover.png" type="Texture" id=19]
[ext_resource path="res://shaders_and_materials/options_gui/return_pressed.png" type="Texture" id=20]
[ext_resource path="res://shaders_and_materials/options_gui/volume_pressed.png" type="Texture" id=21]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=22]
[ext_resource path="res://shaders_and_materials/options_gui/minimize_clicked.png" type="Texture" id=23]
[ext_resource path="res://shaders_and_materials/options_gui/minimize_hover.png" type="Texture" id=24]
[ext_resource path="res://shaders_and_materials/options_gui/minimize.png" type="Texture" id=25]
[ext_resource path="res://shaders_and_materials/options_gui/fullscreen.png" type="Texture" id=26]
[ext_resource path="res://shaders_and_materials/options_gui/fullscreen_clicked.png" type="Texture" id=27]
[ext_resource path="res://shaders_and_materials/options_gui/fullscreen_hover.png" type="Texture" id=28]
[ext_resource path="res://shaders_and_materials/options_gui/music_deselect_hover.png" type="Texture" id=29]
[ext_resource path="res://shaders_and_materials/options_gui/music_deselect_clicked.png" type="Texture" id=30]
[ext_resource path="res://shaders_and_materials/options_gui/volume_deselect_clicked.png" type="Texture" id=31]
[ext_resource path="res://shaders_and_materials/options_gui/volume_deselect_hover.png" type="Texture" id=32]
[ext_resource path="res://data/save_system.gd" type="Script" id=33]
[ext_resource path="res://shaders_and_materials/options_gui/quit_pressed.png" type="Texture" id=34]
[ext_resource path="res://shaders_and_materials/options_gui/quit_hover.png" type="Texture" id=35]
[ext_resource path="res://shaders_and_materials/options_gui/quit.png" type="Texture" id=36]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=37]

[node name="OptionsMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 22 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 18 )

[node name="load" type="Sprite" parent="."]
visible = false
texture = ExtResource( 10 )

[node name="load_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="load_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 11 )

[node name="music" type="Sprite" parent="."]
texture = ExtResource( 16 )

[node name="music_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 19 )

[node name="music_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 14 )

[node name="restart" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 5 )

[node name="restart_hover" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 0 )
texture = ExtResource( 15 )

[node name="restart_clicked" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 0 )
texture = ExtResource( 17 )

[node name="return" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="return_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="return_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 20 )

[node name="save" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )

[node name="save_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="save_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="volume" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="volume_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="volume_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 21 )

[node name="minimize" type="Sprite" parent="."]
visible = false
texture = ExtResource( 25 )

[node name="minimize_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 23 )

[node name="minimize_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 24 )

[node name="fullscreen" type="Sprite" parent="."]
texture = ExtResource( 26 )

[node name="fullscreen_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 27 )

[node name="fullscreen_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 28 )

[node name="volume_deselect" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="volume_deselect_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 31 )

[node name="volume_deselect_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 32 )

[node name="music_deselect" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )

[node name="music_deselect_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 30 )

[node name="music_deselect_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 29 )

[node name="save_system" type="Node2D" parent="."]
script = ExtResource( 33 )

[node name="quit" type="Sprite" parent="."]
visible = false
texture = ExtResource( 36 )

[node name="quit_hover" type="Sprite" parent="."]
visible = false
texture = ExtResource( 35 )

[node name="quit_clicked" type="Sprite" parent="."]
visible = false
texture = ExtResource( 34 )

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )
bus = "Effects"
